--- a/resources/css/dashboardstyles.css
+++ b/resources/css/dashboardstyles.css
@@ -13,7 +13,7 @@
     height: 60px;
     width: 100%;
     /* background-color: rgba(145, 251, 230, 0.5); */
-    background: #b7b6b6;
+    background: rgb(135, 205, 235);
     box-shadow: 0px 2px 20px 0px rgba(1, 41, 112, 0.10);
 }
 
@@ -58,7 +58,7 @@
 .side-bar{
     height: 100%;
     /* flex-basis: 20%; */
-    background: #a7a5a5;
+    background: skyblue;
     box-shadow: 0px 0px 20px 0px rgba(1, 41, 112, 0.10);
 }
 
